<resources>
    <string name="app_name">Premium VPN</string>

    <string name="vpn_process_name" translatable="false">:my.custom.vpn.process.name</string>
    <string name="vpn_provider_authorities" translatable="false">com.anchorfree.hydrasdk.app.demo</string>

    <string name="log_in">LOGIN</string>
    <string name="log_out">LOGOUT</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="optimal_server">OPTIMAL SERVER</string>
    <string name="unknown">UNKNOWN</string>

    <string name="devices_exceed">Available device count is exceed. Please consider upgrading your subscription.</string>
    <string name="sessions_exceed">Available active session count is exceed. Please consider upgrading your subscription.</string>

    <string name="version">Version</string>
    <string name="app_error">Application error</string>
    <string name="no_data">No data</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_type">Account Type</string>
    <string name="activated_devices">Activated Devices</string>
    <string name="account">Account</string>
    <string name="signin_error">Unable to sign in</string>
    <string name="no_network">Unable to connect to server. Check your Internet connection.</string>
    <string name="online_devices">Online Devices</string>
    <string name="please_wait">Please Wait</string>
    <string name="vpn_server_location">VPN Server Location</string>
    <string name="vpn_node">VPN Node</string>
    <string name="legal_information">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>


    <string name="Admob_app_id">ca-app-pub-3076549648990958~6053331325</string>
    <string name="Admob_banner_id">ca-app-pub-3076549648990958/1249944245</string>
    <string name="Admob_intertesial_id">ca-app-pub-3076549648990958/7623780907</string>


    <string name="Help_to_improve_Email">idcoder99@gmail.com</string>
    <string name="tell_to_friend_text">Premium VPN is world best vpn app its Super Faster Free VPN Unlimited Proxy Server lifetime free access https://play.google.com/store/apps/details?id=com.hello.vpnapppro</string>


    <string name="Aboutus_page_Text">Premium VPN is world best vpn app its Super Faster Free VPN Unlimited Proxy Server lifetime free access any unlock website save your device
    Secure VPN is the most trusted security, privacy and access platform with top performance on speed, stability and security to unblock sites, unblock any apps or websites, access social networks, watch videos and movies, protect Wi-Fi hotspot security and protect privacy</string>


    <string name="Faq_page_Text">Premium VPN is world best vpn app its Super Faster Free VPN Unlimited Proxy Server lifetime free access any unlock website save your device
    Secure VPN is the most trusted security, privacy and access platform with top performance on speed, stability and security to unblock sites, unblock any apps or websites, access social networks, watch videos and movies, protect Wi-Fi hotspot security and protect privacy</string>


    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Click to connect</string>

    <string name="host_url_title">Host Url: </string>
    <string name="carrier_id_title">Carrier ID: </string>
    <string name="confirm">CONFIRM</string>

    <string name="traffic_stats">UL: %1$s, DL: %2$s </string>
    <string name="traffic_limit">%1$s of %2$s available</string>
    <string name="traffic_unlimited">UNLIMITED</string>

    <string name="current_server">CURRENT_SERVER</string>
    <string name="connecting">Connecting</string>
    <string name="paused">Paused</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Premium VPN</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="sub_1_month">Pay Monthly</string>
    <string name="sub_1_month_cost">$4.99 / month USD</string>
    <string name="sub_6_month">6 Month</string>
    <string name="sub_12_month">Pay Yearly</string>
    <string name="sub_12_month_cost">$49.99 / year USD</string>
    <string name="sub_lifetime">Pay Lifetime</string>
    <string name="sub_lifetime_cost">$149.99 lifetime USD</string>

    <string name="signup">Sign up to Premium</string>
    <string name="signup_desc">Get unlimited access on all your devices by choosing an auto-renewing subscription plan.</string>
    <string name="signup_agree">By subscribing, you agree to our \n Terms of Service and Privacy Policy.</string>

</resources>
