<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context="com.vpnterbaik.premium.activity.SubsActivity">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/signup_desc"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:typeface="sans" />

        <LinearLayout
            android:id="@+id/subs1month"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/splashscreencolor"
            android:gravity="center"
            android:onClick="subs1month"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_1_month"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sub_1_month_cost"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subs1year"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/splashscreencolor"
            android:gravity="center"
            android:onClick="subs1year"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_12_month"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sub_12_month_cost"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <!--<Button-->
            <!--android:id="@+id/subs1year"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/subs1month"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="33dp"-->
            <!--android:onClick="subs1year"-->
            <!--android:text="Button" />-->

        <LinearLayout
            android:id="@+id/subslifetime"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:background="@color/splashscreencolor"
            android:gravity="center"
            android:onClick="subslifetime"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_lifetime"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sub_lifetime_cost"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
        <!--<Button-->
            <!--android:id="@+id/subslifetime"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/subs1year"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="33dp"-->
            <!--android:onClick="subslifetime"-->
            <!--android:text="Button" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="center"
            android:text="@string/signup_agree"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:typeface="sans" />

    </LinearLayout>

</RelativeLayout>
